ui fix and ommit dark mode for dev

--- a/src/app/_components/Footer/FooterComponent/index.module.scss
+++ b/src/app/_components/Footer/FooterComponent/index.module.scss
@@ -10,35 +10,38 @@
   }
 }
 
-:global([data-theme='dark']) {
-  .footer {
-    background-color: var(--theme-elevation-50);
-    color: var(--theme-elevation-1000);
+
+.inclusions {
+  display: grid;
+  justify-content: center;
+  gap: 30px;
+  padding: 0;
+  grid-template-columns: repeat(4, 1fr);
+  margin: 100px 0;
+
+  @include large-break {
+    grid-template-columns: repeat(2, 1fr);
   }
-}
-.inclusions{
-    display: grid;
-    justify-content: center;
-    gap: 30px;
-    padding: 0;
-    grid-template-columns:  repeat(4,1fr);
-    margin: 100px 0;
 
-    @include large-break{
-        grid-template-columns: repeat(2,1fr);
-    }
+  @include mid-break {
+    margin: 60px 0;
+  }
 
-    @include mid-break{
-        margin: 60px 0;
-    }
-    
-    @include extra-small-break{
-        grid-template-columns: 1fr;
-    }
+  @include extra-small-break {
+    grid-template-columns: 1fr;
+  }
 }
 
 .icon {
-    margin-bottom:  16px;
+  margin-bottom: 16px;
+}
+
+
+:global([data-theme='dark']) {
+  .footer {
+    background-color: var(--theme-elevation-1000);
+    color: var(--theme-elevation-50);
+  }
 }
 
 .wrap {
